[package]
name = "mirra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rsa = "0.6"
toml = "0.5"
rand = "0.8"
blake3 = "1"
notify = "4"
base64 = "0.13"
num-traits = "0.2"
num-derive = "0.2"
dialoguer = "0.10"
env_logger = "0.9"
async-trait = "0.1"
async-recursion = "1"
tokio-util = { version = "0.7", features = ["codec"] }
fs4 = { version = "0.5", features = ["tokio-async"] }
hyper = { version = "0.14", features = ["runtime", "tcp", "http1", "server", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread"] }
